force-app/main/default/objects/Shelfwatch_Sync_Log__c/Shelfwatch_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Shelfwatch Sync Log</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Shelfwatch Sync Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shelfwatch Sync Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>