force-app/main/default/objects/Shelfwatch_Sync_Log__c/fields/Batch_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_ID__c</fullName>
    <label>Batch Job ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>