force-app/main/default/objects/Shelfwatch_Sync_Log__c/fields/Error_Messages__c.field-meta.xml
<CustomField>
    <fullName>Error_Messages__c</fullName>
    <label>Error Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>