force-app/main/default/objects/Shelfwatch_Sync_Log__c/fields/Shelfwatch_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Shelfwatch_Mapping__c</fullName>
    <label>Shelfwatch Mapping</label>
    <referenceTo>Shelfwatch_Mapping__c</referenceTo>
    <relationshipLabel>Shelfwatch Sync Logs</relationshipLabel>
    <relationshipName>Shelfwatch_Sync_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>