force-app/main/default/objects/Shelfwatch_Sync_Log__c/fields/Total_Processed__c.field-meta.xml
<CustomField>
    <fullName>Total_Processed__c</fullName>
    <label>Total Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>