force-app/main/default/objects/Shelfwatch_Sync_Log__c/fields/Total_Synced__c.field-meta.xml
<CustomField>
    <fullName>Total_Synced__c</fullName>
    <label>Total Synced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>